WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111207
Crash at WebCore::SharedBuffer::hasPlatformData during paste
https://bugs.webkit.org/show_bug.cgi?id=111207
Summary
Crash at WebCore::SharedBuffer::hasPlatformData during paste
Enrica Casucci
Reported
2013-03-01 12:19:45 PST
Reported some times when performing a paste operation. Here is the stack trace of the crash.
> 1 com.apple.WebCore 0x7fff8b973eb4 WebCore::SharedBuffer::hasPlatformData() const + 0x4
2 com.apple.WebCore 0x7fff8b973e81 WebCore::SharedBuffer::size() const + 0x11 3 com.apple.WebCore 0x7fff8b974224 -[WebCoreSharedBufferData length] + 0x14 4 com.apple.Foundation 0x7fff8e97ffb4 -[NSRTFD initWithDataRepresentation:] + 0x21 5 com.apple.Foundation 0x7fff8e977866 -[NSFileWrapper initWithSerializedRepresentation:] + 0x3e 6 com.apple.AppKit 0x7fff8986ea77 -[NSRTFReader initWithRTFD:] + 0x3a 7 com.apple.AppKit 0x7fff8932ba8c _NSReadAttributedStringFromURLOrData + 0x1560 8 com.apple.AppKit 0x7fff8932a493 -[NSAttributedString(NSAttributedStringKitAdditions) initWithData:options:documentAttributes:error:] + 0x70 9 com.apple.WebCore 0x7fff8c357f3b WebCore::documentFragmentWithRTF(WebCore::Frame*, NSString*, WTF::String const&) + 0x13b 10 com.apple.WebCore 0x7fff8bc361d4 WebCore::Pasteboard::documentFragment(WebCore::Frame*, WTF::PassRefPtr<WebCore::Range>, bool, bool&) + 0x1614 11 com.apple.WebCore 0x7fff8bc3473e WebCore::Editor::pasteWithPasteboard(WebCore::Pasteboard*, bool) + 0xce 12 com.apple.WebCore 0x7fff8bc3463a WebCore::Editor::paste() + 0x9a 13 com.apple.WebCore 0x7fff8bc34570 WebCore::executePaste(WebCore::Frame*, WebCore::Event*, WebCore::EditorCommandSource, WTF::String const&) + 0x30 14 com.apple.WebCore 0x7fff8bbd1724 WebCore::Editor::Command::execute(WTF::String const&, WebCore::Event*) const + 0xc4 15 com.apple.WebKit 0x7fff90f375ef -[WebHTMLView executeCoreCommandBySelector:] + 0x6f 16 com.apple.AppKit 0x7fff894e7a59 -[NSApplication sendAction:to:from:] + 0x156 17 com.apple.AppKit 0x7fff8961d44c -[NSMenuItem _corePerformAction] + 0x196 18 com.apple.AppKit 0x7fff8961d13a -[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 0x85 19 com.apple.AppKit 0x7fff8961bdc0 -[NSMenu performKeyEquivalent:] + 0x10f 20 com.apple.AppKit 0x7fff8961b283 -[NSApplication _handleKeyEquivalent:] + 0x33d 21 com.apple.AppKit 0x7fff894d8243 -[NSApplication sendEvent:] + 0x1180 22 com.apple.mail 0x10a46ed23 -[MailApp sendEvent:] + 0x0 (/SourceCache/Mail/Mail-1499/Mail/Application/MailApp.m:432) 23 com.apple.AppKit 0x7fff893ee2fa -[NSApplication run] + 0x27c 24 com.apple.AppKit 0x7fff89392cb6 NSApplicationMain + 0x365 25 libdyld.dylib 0x7fff9111f7e1 start + 0x1 <
rdar://problem/13024528
>
Attachments
Patch
(3.24 KB, patch)
2013-03-01 12:24 PST
,
Enrica Casucci
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2013-03-01 12:24:39 PST
Created
attachment 191008
[details]
Patch
Ryosuke Niwa
Comment 2
2013-03-01 12:27:01 PST
Comment on
attachment 191008
[details]
Patch rs=me.
Enrica Casucci
Comment 3
2013-03-01 12:28:53 PST
Committed revision 144479.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug