Crash at WebCore::SharedBuffer::hasPlatformData during paste. https://bugs.webkit.org/show_bug.cgi?id=111207. <rdar://problem/13024528>

Reviewed by Ryosuke Niwa.

This is a speculative fix since we don't have a solid repro case.
Adding null check every time we get a SharedBuffer from the pasteboard.

* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::plainText):
(WebCore::documentFragmentWithRTF):



Canonical link: https://commits.webkit.org/129541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144479 268f45cc-cd09-0410-ab3c-d52691b4dbfc